--- a/views/background.haml
+++ b/views/background.haml
@@ -1,7 +1,7 @@
 #wrapper
   #selected
     %img( class="thumb" src="images/raw/#{@fname}")
-    %a( href="/" ) GO BACK
+    %a( href="/" ) Go Back
   #bg
     - @bg_images.each do |i|
       %a( href="finish?fname=#{@fname}&bgname=#{i}")
