--- a/views/index.haml
+++ b/views/index.haml
@@ -3,5 +3,6 @@
     - @raw_images.each do |i|
       %a( href="choose_background?fname=#{i}")
         %img( class="raw" src="images/raw/#{i}")
+  %p(style="font-size: 3em; color: #FFF;") Only last 10
 
 
