--- a/views/finish.haml
+++ b/views/finish.haml
@@ -1,7 +1,7 @@
 #wrapper
   #selected
     %img( class="thumb" src="images/final/#{@name}")
-    %a( href="/" ) GO BACK
+    %a( href="/" ) Go Back
   #bg
     - @out_images.each do |i|
       %img( class="final" src="images/final/#{i}")
