--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,7 +5,9 @@
     %link(rel="stylesheet" href="/css/main.css")
     //%link(href='http://fonts.googleapis.com/css?family=Walter+Turncoat' rel='stylesheet' type='text/css')
     %script(type="text/javascript" src="/javascript/jQuery.min.js")
-    %script(type="text/javascript" src="/javascript/main.js")
+    %script(type="text/javascript" src="/javascript/underscore.js")
+    %script(type="text/javascript" src="/javascript/backbone.js")
+    %script(type="text/javascript" src="/javascript/application.js")
 
   %body
     = yield
